# veda-tensorflow

./: CMakeLists.txt  README.md  veda-tensors.json
src/: CMakeLists.txt  veda-tensorflow.json
src/veda/tensorflow/: CMakeLists.txt  __ns.h  all-types.h  api.h  binary.cpp  broadcast_to_op.cpp  constant_op.cpp  dense_update_functor.h  fill.cpp  function_ops.cpp  kernels.cpp  op_kernel.cpp  platform.cpp  resource_variable_ops.cpp  shape_op.cpp  stream_executor.cpp  training_ops.cpp  unary_t.cpp  unary_tt.cpp  unary_tt_update.cpp
