CMAKE_MINIMUM_REQUIRED(VERSION 3.12)

PROJECT(VEDATensorFlow VERSION 0.1.0 LANGUAGES C CXX)

FIND_PACKAGE(Illyrian 0.1 REQUIRED)
ILLYRIAN_PROJECT(
	C_STANDARD		11 # TF requires 11!
	CXX_STANDARD	11 # TF requires 11!
	INSTALL_PREFIX "/usr/local/ve/"
)

ILLYRIAN_FIND_PACKAGE		(Tungl			VERSION 0.1 REQUIRED PYTHON "tungl/cmake"			PATHS "/usr/local/nle/tungl/cmake")
ILLYRIAN_FIND_PACKAGE		(VEDA			VERSION 1.3 REQUIRED PYTHON "veda/cmake"			PATHS "/usr/local/ve/veda/cmake")
ILLYRIAN_FIND_PACKAGE		(VEDATensors	VERSION 0.1 REQUIRED PYTHON "veda-tensors/cmake"	PATHS "/usr/local/ve/veda-tensors/cmake")
ILLYRIAN_FIND_PYTHON_FILE	(TENSORFLOW_LIBRARY tensorflow "libtensorflow_framework.so.2" REQUIRED)

MARK_AS_ADVANCED(TENSORFLOW_LIBRARY)
GET_FILENAME_COMPONENT(TENSORFLOW_DIR ${TENSORFLOW_LIBRARY} DIRECTORY)
SET(TENSORFLOW_INCLUDES ${TENSORFLOW_DIR}/include)

SET(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/dist" CACHE STRING "" FORCE)

INCLUDE_DIRECTORIES(${Tungl_INCLUDES})
INCLUDE_DIRECTORIES(${VEDA_INCLUDES})
INCLUDE_DIRECTORIES(${VEDATensors_INCLUDES})
INCLUDE_DIRECTORIES(${TENSORFLOW_INCLUDES})

SET(VEDATensorFlow_INSTALL_PATH "tensorflow-plugins")

ADD_SUBDIRECTORY(src)

INSTALL(FILES ${CMAKE_CURRENT_LIST_DIR}/LICENSE DESTINATION ${VEDATensorFlow_INSTALL_PATH} RENAME VEDA-TENSORFLOW-LICENSE)