INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})

SET(SRC)
INCLUDE(${CMAKE_CURRENT_LIST_DIR}/veda/tensorflow/CMakeLists.txt)
ADD_LIBRARY(veda-tensorflow SHARED ${SRC})
ILLYRIAN_TARGET_OPTIONS(veda-tensorflow
	PYTHON
	DESTINATION		${VEDATensorFlow_INSTALL_PATH}
	PYTHON_RPATH	"$ORIGIN/../veda/lib64" "$ORIGIN/../tungl/lib64" "$ORIGIN/../veda/tensors/lib64"
)
TARGET_LINK_LIBRARIES(veda-tensorflow PRIVATE
	${VEDA_LIBRARY}
	${Tungl_LIBRARY}
	${VEDATensors_LIBRARY}
	${TENSORFLOW_LIBRARY}
)

ADD_PYTHON_WHEEL(dist ${CMAKE_CURRENT_LIST_DIR}/veda-tensorflow.json)