INCLUDE_DIRECTORIES(${CMAKE_CURRENT_LIST_DIR})

IF(TENSORFLOW_VERSION VERSION_GREATER_EQUAL "2.9.0")
	ADD_DEFINITIONS(-D_GLIBCXX_USE_CXX11_ABI=1)
ELSE()
	ADD_DEFINITIONS(-D_GLIBCXX_USE_CXX11_ABI=0)
ENDIF()

SET(SRC)
INCLUDE(${CMAKE_CURRENT_LIST_DIR}/veda/tensorflow/CMakeLists.txt)
ADD_LIBRARY(veda-tensorflow SHARED ${SRC})
ILLYRIAN_TARGET_OPTIONS(veda-tensorflow
	PYTHON
	DESTINATION		${VEDATensorFlow_INSTALL_PATH}
	PYTHON_RPATH	"$ORIGIN/../veda/lib64" "$ORIGIN/../tungl/lib64" "$ORIGIN/../veda/tensors/lib64"
)
TARGET_LINK_LIBRARIES(veda-tensorflow PRIVATE
	${VEDA_LIBRARY}
	${Tungl_LIBRARY}
	${VEDATensors_LIBRARY}
	${TENSORFLOW_LIBRARY}
)
TARGET_LINK_OPTIONS(veda-tensorflow PRIVATE -Wl,--no-as-needed)

ADD_PYTHON_WHEEL(dist ${CMAKE_CURRENT_LIST_DIR}/veda-tensorflow.json)